fixed top border spacing

--- a/src/pages/schedule.module.css
+++ b/src/pages/schedule.module.css
@@ -30,13 +30,13 @@
 
 .title{
     border-bottom: 1px solid white; 
-    padding: 3rem 2rem 2rem 2rem; 
+    padding: 2rem 2rem 2rem 2rem; 
     color: #41FFA4; 
     font-family: "pixer"; 
 }
 
 .titleFirst{
-    padding: 3rem 2rem 2rem 2rem; 
+    padding: 2rem 2rem 2rem 2rem; 
     color: #41FFA4; 
     font-family: "pixer"; 
 }
